common-applications/control/maintenance/deployment.yaml
# Deployment for maintenance service
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: maintenance-server
spec:
  template:
    spec:
      containers:
        - name: maintenance-server
