common-applications/control/maintenance/nginx-route.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: nginx-route
  name: maintenance-nginx-route
spec:
  selector:
    matchLabels:
      component: nginx-route
  template:
    metadata:
      labels:
        component: nginx-route
    spec:
      containers:
        - image: nginx:latest
          name: nginx-route
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-config-volume
              subPath: nginx.conf
            - mountPath: /etc/nginx/conf.d/default.conf
              name: nginx-config-volume
              subPath: default.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-configuration
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: nginx-route
  name: nginx-route-service
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    component: nginx-route
