common-applications/control/maintenance/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: "X-Auth-Request-User, X-Auth-Request-Groups, X-Auth-Request-Email, X-Auth-Request-Preferred-Username"
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: maintenance-ingress
spec:
  tls:
    - hosts:
        - operate.osinfra.cn
      secretName: tls-secrets
  rules:
    - host: operate.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: nginx-route-service
              servicePort: 80
            path: /
